<resources>
    <string name="app_name">ZariSms</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash_board">Dash Board</string>
    <string name="mail_title">Mail Title</string>
    <string name="password">Password</string>
    <string name="your_email">Your Email</string>
    <string name="recipient_email">Recipient Email</string>
    <string name="type_message_here">Type message here</string>
    <string name="send_mail">Send Mail</string>
    <string name="proceed">Proceed</string>

</resources>
