<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.MailFragment">

    <EditText
        android:id="@+id/mail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/mail_title"
        android:drawableStart="@drawable/ic_text_fields"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/mail_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mail_destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/recipient_email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/recipient_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/mail_title"
        app:layout_constraintStart_toStartOf="@+id/mail_title"
        app:layout_constraintTop_toBottomOf="@+id/mail_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="@+id/mail_destination"
        app:layout_constraintStart_toStartOf="@+id/mail_destination"
        app:layout_constraintTop_toBottomOf="@+id/mail_destination">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp">

            <EditText
                android:id="@+id/mail_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:autofillHints=""
                android:background="@null"
                android:fontFamily="sans-serif"
                android:hint="@string/type_message_here"
                android:inputType="textMultiLine"
                android:textSize="20sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_details_counter" />

            <TextView
                android:id="@+id/mail_details_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="0/160"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/mail_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:text="@string/send_mail"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>